manifests/argo/argo-events-minio-gw.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: minio
spec:
  type: minio
  eventSourceRef:
    name: minio-event-source
  template:
    serviceAccountName: argo-events-sa
  subscribers:
    http:
      - "http://minio-sensor.devconf.svc:9300/"
